Make anti regex whitelist commands use aggregation